<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:id="@+id/diseñoTabla"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray">


    <TextView
        android:id="@+id/operacionesTextView"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@android:color/background_dark"
        android:gravity="right"
        android:textColor="@android:color/darker_gray"
        android:textSize="50dp"

        />

    <TextView
        android:id="@+id/resultadoTextView"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@android:color/background_dark"
        android:gravity="right"
        android:textColor="@android:color/darker_gray"
        android:textSize="50dp"

        />
    <TableRow
        android:id="@+id/primeraFilaTabla"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"

        >


        <Button
            android:id="@+id/botonC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/colorControlHighlight"
            android:padding="25dp"
            android:text="@string/C"
            android:textSize="20dp"
            />

        <Button
            android:id="@+id/botonPotencia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/colorControlHighlight"
            android:padding="25dp"
            android:text=""
            android:textSize="20dp" />

        <Button
            android:id="@+id/botonRaiz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/colorControlHighlight"

            android:padding="25dp"
            android:text="@string/simboloRaiz"
            android:textSize="20dp" />

        <Button
            android:id="@+id/botonDivision"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/colorControlHighlight"
            android:onClick="onClickOperador"
            android:padding="25dp"
            android:text="@string/simboloDivision"
            android:textSize="20dp" />
    </TableRow>

    <TableRow
        android:id="@+id/segundaFilaTabla"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">


        <Button
            android:id="@+id/botonNum7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/colorControlHighlight"
            android:onClick="onClickNumero"
            android:padding="25dp"
            android:text="@string/Num7"
            android:textSize="20dp" />

        <Button
            android:id="@+id/botonNum8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/colorControlHighlight"
            android:onClick="onClickNumero"
            android:padding="25dp"
            android:text="@string/Num8"
            android:textSize="20dp" />

        <Button
            android:id="@+id/botonNum9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/colorControlHighlight"
            android:onClick="onClickNumero"
            android:padding="25dp"
            android:text="@string/Num9"
            android:textSize="20dp" />

        <Button
            android:id="@+id/botonMultiplicacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/colorControlHighlight"
            android:onClick="onClickOperador"
            android:padding="25dp"
            android:text="@string/simboloMultiplicacion"
            android:textSize="20dp" />
    </TableRow>

    <TableRow

        android:id="@+id/terceraFilaTabla"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/botonNum4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/colorControlHighlight"
            android:onClick="onClickNumero"
            android:padding="25dp"
            android:text="@string/Num4"
            android:textSize="20dp" />

        <Button
            android:id="@+id/botonNum5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/colorControlHighlight"
            android:onClick="onClickNumero"
            android:padding="25dp"
            android:text="@string/Num5"
            android:textSize="20dp" />

        <Button
            android:id="@+id/botonNum6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/colorControlHighlight"
            android:onClick="onClickNumero"
            android:padding="25dp"
            android:text="@string/Num6"
            android:textSize="20dp" />

        <Button
            android:id="@+id/botonResta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/colorControlHighlight"
            android:onClick="onClickOperador"
            android:padding="25dp"
            android:text="@string/simboloResta"
            android:textSize="20dp" />

    </TableRow>

    <TableRow

        android:id="@+id/cuartaFilaTabla"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        >

        <Button
            android:id="@+id/botonNum1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/colorControlHighlight"
            android:onClick="onClickNumero"
            android:padding="25dp"
            android:text="@string/Num1"
            android:textSize="20dp" />

        <Button
            android:id="@+id/botonNum2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/colorControlHighlight"
            android:onClick="onClickNumero"
            android:padding="25dp"
            android:text="@string/Num2"
            android:textSize="20dp" />

        <Button
            android:id="@+id/botonNum3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/colorControlHighlight"
            android:onClick="onClickNumero"
            android:padding="25dp"
            android:text="@string/Num3"
            android:textSize="20dp" />

        <Button
            android:id="@+id/botonSuma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/colorControlHighlight"
            android:onClick="onClickOperador"
            android:padding="25dp"
            android:text="@string/simboloSuma"
            android:textSize="20dp" />
    </TableRow>

    <TableRow

        android:id="@+id/quintaFilaTabla"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/botonCambioSigno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/colorControlHighlight"
            android:padding="25dp"
            android:text="@string/simboloMasMenos"

            android:textSize="20dp" />

        <Button
            android:id="@+id/botonNum0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/colorControlHighlight"
            android:onClick="onClickNumero"
            android:padding="25dp"

            android:text="@string/Num0"
            android:textSize="20dp" />

        <Button
            android:id="@+id/botonComa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/colorControlHighlight"
            android:padding="25dp"
            android:text="@string/simboloComa"
            android:onClick="onClickComa"
            android:textSize="20dp" />

        <Button
            android:id="@+id/botonResultado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/colorControlHighlight"
            android:padding="25dp"
            android:text="@string/simboloResultado"
            android:textSize="20dp"
            android:onClick="onClickIgual"/>
    </TableRow>


    <TableRow

        android:id="@+id/sextaFilaTabla"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:gravity="center">

        <Button
            android:id="@+id/botonOpciones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/opciones"
            android:onClick="opciones"
            android:textSize="20dp" />

        <Button
            android:id="@+id/botonSalir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/salir"
            android:textSize="20dp"
            android:onClick="BotonSalirPulsado"/>
    </TableRow>

</TableLayout>
