<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"></LinearLayout>
    <TextView
        android:id="@+id/textViewHDOpciones"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/habilitar_operadores" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"></LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="110dp"
                android:layout_height="27dp"

                android:orientation="vertical"></LinearLayout>
            <TextView
                android:id="@+id/textViewSuma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/suma"
                android:textSize="20dp"
                tools:text="@string/suma" />

            <Switch
                android:id="@+id/switchSuma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
            <LinearLayout
                android:layout_width="110dp"
                android:layout_height="27dp"

                android:orientation="vertical"></LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"></LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="110dp"
                android:layout_height="27dp"

                android:orientation="vertical"></LinearLayout>
            <TextView
                android:id="@+id/textViewResta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:layout_weight="1"
                android:text="@string/resta"
                tools:text="@string/resta" />

            <Switch
                android:id="@+id/switchResta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
            <LinearLayout
            android:layout_width="110dp"
            android:layout_height="27dp"

            android:orientation="vertical"></LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"></LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="110dp"
                android:layout_height="27dp"

                android:orientation="vertical"></LinearLayout>
            <TextView
                android:id="@+id/textViewMultiplicacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20dp"
                android:text="@string/multiplicacion" />

            <Switch
                android:id="@+id/switchMultiplicacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
            <LinearLayout
                android:layout_width="110dp"
                android:layout_height="27dp"

                android:orientation="vertical"></LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"></LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="110dp"
                android:layout_height="27dp"

                android:orientation="vertical"></LinearLayout>
            <TextView
                android:id="@+id/textViewDivision"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20dp"
                android:text="@string/division" />

            <Switch
                android:id="@+id/switchDivision"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
            <LinearLayout
                android:layout_width="110dp"
                android:layout_height="27dp"

                android:orientation="vertical"></LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"></LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="110dp"
                android:layout_height="27dp"

                android:orientation="vertical"></LinearLayout>
            <TextView
                android:id="@+id/textViewNose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:layout_weight="1"
                android:text="Nose" />

            <Switch
                android:id="@+id/switchNose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
            <LinearLayout
                android:layout_width="110dp"
                android:layout_height="27dp"

                android:orientation="vertical"></LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"></LinearLayout>

    <TextView
        android:id="@+id/textViewColoresOperadores"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/ColoresOperadores" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"></LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/textViewOperadores"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20dp"
                android:text="TextView" />

            <LinearLayout
                android:layout_width="30dp"
                android:layout_height="20dp"

                android:orientation="vertical"></LinearLayout>

            <Spinner
                android:id="@+id/spinnerOperadores"
                android:entries="@array/OperadorColores"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="85dp"

            android:orientation="vertical"></LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"></LinearLayout>

    <TextView
        android:id="@+id/textViewColoresOperandos"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/ColoresOperandos" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"></LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/textViewOperandos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20dp"
                android:text="TextView" />

            <LinearLayout
                android:layout_width="30dp"
                android:layout_height="20dp"

                android:orientation="vertical"></LinearLayout>

            <Spinner
                android:id="@+id/spinnerOperandos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"

            android:orientation="vertical"></LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"></LinearLayout>
</LinearLayout>

